--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -95,3 +95,75 @@ h1 {
     font-size: 25px;
     color: red;
 }
+
+.header-container {
+    margin-top: 5px;
+    display: flex;
+}
+
+.description-container {
+    border: 1px solid;
+    margin: 10px 5% 0 5%;
+}
+
+.button-group {
+    margin-left: 30%;
+}
+
+.button-group button {
+    width: 150px;
+    height: 40px;
+    font-size: 17px;
+    color: white;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+    margin-left: 5px;
+}
+
+.watch-button {
+    background-color: #1A76D1;
+    width: 75px;
+    height: 40px;
+    font-size: 15px;
+    color: white;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+}
+
+.member-button {
+    background-color: #1A76D1;
+}
+
+.close-button {
+    background-color: #F57C05;
+}
+
+.edit-button {
+    background-color: #8CC34A;
+}
+
+.delete-button {
+    background-color: #E57373;
+}
+
+.create-issue-button {
+    width: 150px;
+    height: 40px;
+    margin-left: 85%;
+    font-size: 17px;
+    background-color: #1A76D1;
+    color: white;
+    border-radius: 15px;
+    border: none;
+    outline: none;
+}
+
+.issue-list-title {
+    margin-top: 30px;
+}
+
+section {
+    margin: 0 5% 0 5%;
+}
