--- a/backend/public/css/style.css
+++ b/backend/public/css/style.css
@@ -189,3 +189,27 @@ section {
     white-space: nowrap;
     text-overflow: ellipsis;
 }
+
+.header-bar
+{
+    height: 3em;
+    width: auto;
+    background-color: #1A76D1;
+}
+
+.header-table td {
+    height: 3em;
+    width: 30em;
+    border: 1px solid white;
+    margin: 0 auto 0 auto;
+}
+
+.header-table a {
+    color: white;
+    font-size: 20px;
+}
+
+.header-table p {
+    text-align: center;
+    margin: 0;
+}
